# cs-problem-solving-project

./: .gitignore  CHANGELOG.md  README.md  controller.py  file_dialog_window.py  file_load_frame.py  file_load_frame_view.py  file_select_frame.py  graph_model.py  graph_widget.py  graph_widget.py.orig  main.py  plotting_function.py  plotting_function_model.py  pyproject.toml  requirements.txt  reverbform_model.py  rt_alternate_buttons.py  rt_alternate_buttons_view.py  spectrogram_model.py  view.py  wave_model.py  waveform_model.py
packaging/src/: requirements.txt
packaging/src/cs_problem_solving_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
packaging/src/sound_visualizer/: controller.py  file_select_frame.py  graph_model.py  rt_alternate_buttons_view.py
