[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-problem-solving-project"
version = "0.0.1"
authors = [
  { name="Gale Falikson", email="afalikson1705@floridapoly.edu" },
  { name="Elijah Ingerson", email="eingerson3419@floridapoly.edu"}
]
description = "Produces an RT60 plot"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/catstar27/cs-problem-solving-project"
Issues = "https://github.com/catstar27/cs-problem-solving-project/issues"
